--- a/GroceryStore.Console/GroceryStore.Console.csproj
+++ b/GroceryStore.Console/GroceryStore.Console.csproj
@@ -7,4 +7,8 @@
         <Nullable>enable</Nullable>
     </PropertyGroup>
 
+    <ItemGroup>
+      <ProjectReference Include="..\GroceryStore.Logic\GroceryStore.Logic.csproj" />
+    </ItemGroup>
+
 </Project>
